# LeRename

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build_exe.bat  build_exe_console.bat  file_renamer.py  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
